--- a/index.html
+++ b/index.html
@@ -1,16 +1,42 @@
 <html>
-	<head>
-		<script src="index.js"></script>
 
+	<head>
+	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+	  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+	  <script src="index.js"></script>
 	</head>
 
-	
 	<body>
-		hola
+	  
+	  <div class="container">
+	    <h1 class="generalTitle">Robot Game</h1>
 
-	</body>
+	    <div id="containerControls">
+	      <button class="btn controlActionButton" id="prev" onClick=prev();>Prev</button>
+	      <button class="btn controlActionButton" id="next" onClick=next();>Next</button>
+	    </div>
 
+	    <div id="containerGameData">
+	      <div id="robotData">
+	        <div id="robotName" class="robotNameValue"></div>
+	        <div class="robotImageContainer" id="robotImageContainer"><img class="robotImage" /></div>
+	        <div id="robotHp"><span class="robotHpValue"></span> HP left</div>
+	        <div id="robotGold"><span class="robotGoldValue"></span> Gold</div>
+	        <div id="timeLeft"></div>
+	      </div>
 
+	      <div id="playerData">
+	        <div class="containerGeneralDataPlayer">
+	          <div id="playerName" class="playerNameValue"></div>
+	          <div id="attack"><h6>Attack: <span class="attackValue"></span></h6></div>
+	          <div id="gold"><h6>Gold: <span class="goldValue"></span></h6></div>
+	        </div>
+	        <div id="weapons"></div>
+	      </div>
+	    </div>  
 
+	  </div>
+
+</body>
 
 </html>
